--- a/scss/layout/_sections.scss
+++ b/scss/layout/_sections.scss
@@ -127,9 +127,12 @@
 	margin-left: -15px;
     margin-right: -15px;
 
+    h3 {
+    	margin-top: 40px;
+    }
+
     .input-group {
     	padding: 2em;
-    	margin-top: -5%;
 
     	#taskItemInput {
     		background-color: $color-secondary;
